test/vm/errors/parser/missing_fn_body.ach
// Parser error: missing function body (no braces)
// Expected: error about expected `{`

fn add(x, y)
    return x + y
